tests/attrib/04-wrong.rs
use lazy_nd::lazy_nd;

#[lazy_nd(lim = D)]
struct Test<const D: usize> {}
fn main() {}
